resolve issues on mobile

--- a/src/components/GetHelp/getHelpHero.css
+++ b/src/components/GetHelp/getHelpHero.css
@@ -51,7 +51,7 @@
   }
 
   .hero1 {
-      height: 50vh;
+      height: 60vh;
       display: flex;
       display: -webkit-flex;
       justify-content: center;
