--- a/src/components/GetInvolvedOpts/getInvolvedHero.css
+++ b/src/components/GetInvolvedOpts/getInvolvedHero.css
@@ -51,7 +51,7 @@
   }
 
   .hero {
-      height: 50vh;
+      height: 60vh;
       display: flex;
       display: -webkit-flex;
       justify-content: center;
@@ -63,7 +63,7 @@
 
      .wrapper {
         width: 100%;
-        height: 52.5vh;
+        height: 60vh;
         margin: -45px 0 0 0;
     }
     .heading {
@@ -82,8 +82,13 @@
     }  
     .textBox {
         text-align: left;
-        margin: 40px 0 0 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        margin: 0px 0 0 0;
         padding: 20px;
+        height: 100%;
     }  
          .purpleTitle {
         font-size: 150%;
